--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,8 @@ nav {
 }
 
 .container{
-    margin: auto;
+    margin-left: 30px;
+    margin-right: 30px;
     margin-top: 50px;
     height: 55vh;
     width: 55vh;
@@ -23,18 +24,29 @@ nav {
     padding-top: 50px;
     box-shadow: -10px 12px 15px 10px rgba(159, 117, 117, 0.3);
     text-align: center;
+    margin-left:20%;
+    float: left;
 }
+
 p{
    margin:2em;
 }
 a{
     color: white !important;
 }
-button{
-    font-size: 2em;
+.button{
+    font-size: 1.5em;
     padding-left: 1em;
     padding-right: 1em;
-    margin-left: 43%;
+    margin-left: 45%;
+    background-color: #7cbc2e; 
+    border: none;
+    color: white;
+
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+
 }
 img.small{
     max-width: 15%;
@@ -42,3 +54,11 @@ img.small{
   
 }
 
+
+.nutritionFacts{
+    text-align: left; 
+    margin-top: 7%;
+    font-size: 25px;
+    font-weight: 700;
+    color:#4a3c2a;
+}
